# windows-rust-counters

./: Cargo.toml  README.md
examples/: Cargo.toml  counter_name_help.rs  drop_handle.rs  get_cmd_line.rs  morse_test.rs  retrieve_names.cpp  retrieve_names.rs  retrieve_values.cpp  retrieve_values.rs
examples.d/consume-morse-counter/: Cargo.toml
examples.d/consume-morse-counter/src/: main.rs  reg.rs  ui.rs
examples.d/provide-counters/: .gitignore  build.rs
examples.d/provide-morse-counter/: Cargo.toml  build.rs
examples.d/provide-morse-counter/resources/: morse.reg
examples.d/provide-morse-counter/scripts/: install.bat  uninstall.bat
examples.d/provide-morse-counter/src/: app.rs  lib.rs  morse.rs  reg.rs  strings_providers.rs  worker.rs
examples/examples/: drop_handle.rs  get_cmd_line.rs  morse_test.rs  retrieve_names.rs  retrieve_values.rs
examples/provide_counters/: Cargo.toml  build.rs
examples/provide_counters/src/: lib.rs
morse-stream/: Cargo.toml
morse-stream/examples/: rtsm.rs
morse-stream/src/: lib.rs  main.rs
rtsm-proto/: Cargo.toml
rtsm-proto/src/: lib.rs
signal-flow/: Cargo.toml
signal-flow/src/: interval.rs  lib.rs  pair.rs  rtsm.rs  rx.rs  tx.rs
src/: lib.rs  main.rs  morse.rs
src/signal/: mod.rs  rx.rs  tx.rs
src/win/: mod.rs  uses.rs
src/win/perf/: consume.rs  mod.rs  winperf.rs
src/win/safe/: error.rs  hkey.rs  mod.rs  parse.rs  reg.rs
win-high/: Cargo.toml
win-high/examples/: nom-issue-1122.rs
win-high/src/: error.rs  format.rs  hkey.rs  lib.rs  reg.rs
win-high/src/perf/: consume.rs  display.rs  mod.rs  nom.rs  provide.rs  types.rs  useful.rs  values.rs
win-high/src/prelude/: v1.rs  v2.rs
win-low/: Cargo.toml
win-low/src/: lib.rs  winperf.rs
win-low/src/um/: mod.rs  winnt.rs  winperf.rs
windows-examples-container/: Cargo.toml
windows-examples-container/examples/: drop_handle.rs  get_cmd_line.rs  morse_test.rs  retrieve_names.rs  retrieve_values.rs
windows-examples/consume-morse-counter/: Cargo.toml
windows-examples/consume-morse-counter/src/: main.rs
windows-examples/provide-counters/: Cargo.toml
windows-examples/provide-counters/resources/: exports.def
windows-examples/provide-counters/src/: lib.rs
windows-examples/provide-morse-counter/: Cargo.toml  build.rs
windows-examples/provide-morse-counter/resources/: morse.ini  symbols.h
windows-examples/provide-morse-counter/scripts/: uninstall.bat
windows-examples/provide-morse-counter/src/: example.cpp  lib.rs  worker.rs
