[workspace]
resolver = "3"

members = [
    "signal-flow",
    "morse-stream",
    "rtsm-proto",
    "win-low",
    "win-high",
    "examples.d/provide-morse-counter",
    "examples.d/consume-morse-counter",
    "examples",
]

# exclude crates with crate_type = "cdylib"
default-members = [
    "signal-flow",
    "morse-stream",
    "win-low",
    "win-high",
    "examples.d/consume-morse-counter",
    "examples",
]
