[package]
name = "examples"
version = "0.1.0"
authors = ["ivan tkachenko <ratijas@users.noreply.github.com>"]
edition = "2018"
description = "Dummy library to gather single-file examples in one place"

[dependencies]

libc = "0.2"
hexyl = "0.16.0"
widestring = "1.2"

signal-flow = { path = "../signal-flow" }
morse-stream = { path = "../morse-stream" }

[target.'cfg(windows)'.dependencies]
win-high = { path = "../win-high" }
win-low = { path = "../win-low" }

[target.'cfg(windows)'.dependencies.windows]
version = "0.61"
features = [
    "Win32_System_Environment",
]

[target.'cfg(windows)'.dependencies.windows-core]
version = "0.61"
