[package]
name = "win-high"
version = "0.1.0"
authors = ["ivan tkachenko <ratijas@users.noreply.github.com>"]
edition = "2018"

[lib]
name = "win_high"

[dependencies]
bitflags = "1"
itertools = "0.8"
nom = "5.1"
widestring = "0.4"

[dev-dependencies]
lazy_static = "1"

[target.'cfg(windows)'.dependencies]
win-low = { path = "../win-low" }

[target.'cfg(windows)'.dependencies.winapi]
version = "0.3"
features = [
    "errhandlingapi",
    "minwinbase",
    "minwindef",
    "ntdef",
    "pdh",
    "processenv",
    "sysinfoapi",
    "vadefs",
    "winbase",
    "winerror",
    "winnls",
    "winnt",
    "winreg",
    "winsvc",
]
