[package]
name = "win-high"
version = "0.1.0"
authors = ["ivan tkachenko <ratijas@users.noreply.github.com>"]
edition = "2024"

[lib]
name = "win_high"

[dependencies]
bitflags = "2"
itertools = "0.14"
nom = "8"
widestring = "1.2"

[target.'cfg(windows)'.dependencies]
win-low = { path = "../win-low" }

[target.'cfg(windows)'.dependencies.windows]
version = "0.61"
features = [
    "Win32_Foundation",
    "Win32_Globalization",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Performance",
    "Win32_System_Registry",
    "Win32_System_SystemInformation",
    "Win32_System_SystemServices",
]

[target.'cfg(windows)'.dependencies.windows-core]
version = "0.61"
