[package]
name = "win-low"
version = "0.1.0"
authors = ["ivan tkachenko <ratijas@users.noreply.github.com>"]
edition = "2024"
description = "Low-level WinAPI bindings which are missing in windows crate"

[lib]
name = "win_low"

[dependencies]

[target.'cfg(windows)'.dependencies.windows]
version = "0.61"
features = [
    "Win32_Foundation",
    "Win32_System_Performance",
    "Win32_System_SystemServices",
]

[target.'cfg(windows)'.dependencies.windows-core]
version = "0.61"
