[package]
name = "example-consume-morse-counter"
version = "0.1.0"
authors = ["ivan tkachenko <ratijas@users.noreply.github.com>"]
edition = "2018"

[dependencies]
argh = "0.1.3"
hexyl = "*"
figlet-rs = "0.1.3"
# temporary workaround.  at the time of writing, 1.0.3 just came out and broke the build.
quote = "=1.0.1"

morse-stream = { path = "../../morse-stream" }
signal-flow = { path = "../../signal-flow" }

[target.'cfg(windows)'.dependencies]
win-high = { path = "../../win-high" }
win-low = { path = "../../win-low" }
[target.'cfg(windows)'.dependencies.winapi]
version = "0.3"
features = [
    "winnt",
]

[dependencies.crossterm]
version = "0.14"
features = ["event-stream"]
[dependencies.tui]
version = "0.8.0"
default-features = false
features = ["crossterm"]
