[package]
name = "example-consume-morse-counter"
version = "0.1.0"
authors = ["ivan tkachenko <ratijas@users.noreply.github.com>"]
edition = "2018"

[dependencies]
argh = "0.1.3"
hexyl = "0.16.0"
figlet-rs = "0.1.5"

morse-stream = { path = "../../morse-stream" }
signal-flow = { path = "../../signal-flow" }

[target.'cfg(windows)'.dependencies]
win-high = { path = "../../win-high" }
win-low = { path = "../../win-low" }

[dependencies.crossterm]
version = "0.29"
features = ["event-stream"]

[dependencies.ratatui]
version = "0.29.0"
default-features = false
features = ["crossterm"]
