[package]
name = "example-provide-morse-counter"
version = "0.1.0"
authors = ["ivan tkachenko <ratijas@users.noreply.github.com>"]
edition = "2018"

[lib]
name = "ExampleProvideMorseCounter"
crate-type = ["cdylib"]

[dependencies]

figlet-rs = "0.1.3"
hexyl = "*"
lazy_static = "1"
log = "0.4"
winlog = "*"
# for MOTD counter
reqwest = { version = "0.10", features = ["blocking", "json"] }
tokio = { version = "0.2", features = ["full"] }
serde_json = "1"
serde = "1"
RustyXML = "0.3.0"

# temporary workaround.  at the time of writing, 1.0.3 just came out and broke the build.
quote = "=1.0.1"
morse-stream = { path = "../../morse-stream" }
signal-flow = { path = "../../signal-flow" }

[target.'cfg(windows)'.dependencies]
win-high = { path = "../../win-high" }
win-low = { path = "../../win-low" }
[target.'cfg(windows)'.dependencies.winapi]
version = "0.3"
features = [
    "winnt",
    "winuser",
]

[build-dependencies]
cargo-emit = "0.1"
path-slash = "0.1"
regex = "1"
