[package]
name = "example-provide-morse-counter"
version = "0.1.0"
authors = ["ivan tkachenko <ratijas@users.noreply.github.com>"]
edition = "2018"

[lib]
name = "ExampleProvideMorseCounter"
crate-type = ["cdylib"]

[dependencies]

figlet-rs = "0.1.5"
hexyl = "0.16.0"
lazy_static = "1"
log = "0.4"
eventlog = "0.3.0"
# for MOTD counter
reqwest = { version = "0.12", features = ["blocking", "json"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1"
serde = "1"
RustyXML = "0.3.0"

morse-stream = { path = "../../morse-stream" }
signal-flow = { path = "../../signal-flow" }

[target.'cfg(windows)'.dependencies]
win-high = { path = "../../win-high" }
win-low = { path = "../../win-low" }

[target.'cfg(windows)'.dependencies.windows]
version = "0.61"
features = [
    "Win32_Foundation",
    "Win32_System_Performance",
    "Win32_System_Registry",
]

[build-dependencies]
cargo-emit = "0.2"
path-slash = "0.2"
regex = "1"
