[package]
name = "example_provide_counters"
version = "0.1.0"
authors = ["ivan tkachenko <ratijas@users.noreply.github.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]

[target.'cfg(windows)'.dependencies]
windows-rust-counters = { path = "../.." }
# temporary workaround.  at the time of writing, 1.0.3 just came out and broke the build.
quote = "=1.0.1"
