[package]
name = "example-provide-morse-counter"
version = "0.1.0"
authors = ["ivan tkachenko <ratijas@users.noreply.github.com>"]
edition = "2018"

[lib]
name = "ExampleProvideMorseCounter"
crate-type = ["cdylib"]

[dependencies]

hexyl = "*"
# temporary workaround.  at the time of writing, 1.0.3 just came out and broke the build.
quote = "=1.0.1"

[target.'cfg(windows)'.dependencies]
win-high = { path = "../../win-high" }
win-low = { path = "../../win-low" }
[target.'cfg(windows)'.dependencies.winapi]
version = "0.3"
features = [
    "winnt",
    "winuser",
]

[build-dependencies]
cargo-emit = "0.1"
path-slash = "0.1"
